--- a/style.css
+++ b/style.css
@@ -25,7 +25,8 @@ p {
 	text-align: justify;
 }
 
-p, #content ul {
+p,
+#content ul {
 	margin-left: 1em;
 	margin-right: 1em;
 }
@@ -83,7 +84,7 @@ body {
 	margin: auto;
 }
 
-@media (min-width : 800px) {
+@media (min-width: 800px) {
 	#index {
 		display: initial;
 	}
